kubernetes/gr-foundry/manifests/jiffy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: jiffy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/gaucho-racing/jiffy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: jiffy
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
