kubernetes/gr-foundry/manifests/jiffy/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jiffy
spec:
  type: ExternalName
  externalName: gr-postgres.gauchoracing.com
