kubernetes/gr-foundry/manifests/jiffy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jiffy
  namespace: jiffy
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: jiffy-api.gauchoracing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
